Removed BL demos as long as copyright status is unclear

--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -31,12 +31,12 @@
         are below.
       </p>
 
-      <div class="captioned_image">
+      <!-- div class="captioned_image">
         <a href="detection/ptolemy_britain.html"><img src="images/british_isles_thumb.jpg" /></a>
         <p class="caption">
           Ptolemaic Map Of The British Isles, Ca. 1480 ff.. 60v-61 (British Library)
         </p>
-      </div>
+      </div -->
 
       <div class="captioned_image">
         <a href="detection/portolan.html"><img src="images/portolan_thumb.jpg" /></a>
@@ -92,7 +92,7 @@
             <strong>Map re-labelling.</strong> Using toponym detection and a technique called
             <a href="http://en.wikipedia.org/wiki/Inpainting">inpainting</a>, we can replace the original labels
             for better readability, or to &quot;translate&quot; them to their modern-day counterparts.
-            <a href="relabeling/index.html">See a demo.</a>
+            <!-- a href="relabeling/index.html">See a demo.</a -->
           </li>
 
           <li>...</li>
