--- a/yuma2/index.html
+++ b/yuma2/index.html
@@ -3,15 +3,10 @@
   <head>
     <link rel="stylesheet" href="main.css" type="text/css" />
     <script src="yuma2.min.js"></script>
-    <script>
-      window.onload = function() {
-        var annotator = new ImageAnnotator('annotateme');
-      }
-    </script>
   </head>
 
   <body>
-    <img src="640px-Hallstatt_300.jpg" id="annotateme"/>
+    <img src="640px-Hallstatt_300.jpg" class="annotatable"/>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius 
       diam posuere quam molestie vestibulum. Vestibulum non volutpat elit. Integer 
