Corrected BL attribution

--- a/toponym_identification/detection/ptolemy_britain.html
+++ b/toponym_identification/detection/ptolemy_britain.html
@@ -172,7 +172,7 @@
   <body style="padding:10px">
     <canvas id="map"></canvas>
     <p style="font-family: sans-serif, sans; font-size:12px;">
-      &copy; The British Library Board. Harley MS 7182 ff.. 60v-61. The full hi-res image is £10+vat from <a href="mailto:imagesonline@bl.uk">imagesonline@bl.uk</a>
+      &copy; The British Library Board. Harley MS 7182 ff.. 60v-61.
     </p>
   </body>
 </html>
