--- a/toponym_identification/relabeling/index.html
+++ b/toponym_identification/relabeling/index.html
@@ -51,7 +51,7 @@
     <img class="maplayer" id="relabeled" src="../images/british_isles_relabeled.jpg" />
     <div id="content">
       <p style="font-family: sans-serif, sans; font-size:12px;">
-        &copy; The British Library Board. Harley MS 7182 ff.. 60v-61. The full hi-res image is £10+vat from <a href="mailto:imagesonline@bl.uk">imagesonline@bl.uk</a>
+        &copy; The British Library Board. Harley MS 7182 ff..
       </p>
       <button onclick="javascript:toggleLabels();">Change Labels</button>
     </div>
