--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -36,8 +36,7 @@
         <p class="caption">
           Ptolemaic Map Of The British Isles, Ca. 1480,
           &copy; The British Library Board.<br/>
-          Harley MS 7182 ff.. 60v-61.<br/>
-          (The full hi-res image is £10+vat from <a href="mailto:imagesonline@bl.uk">imagesonline@bl.uk</a>) 
+          Harley MS 7182 ff.. 60v-61. 
         </p>
       </div>
 
