Corrected BL attribution

--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -34,7 +34,8 @@
       <div class="captioned_image">
         <a href="detection/ptolemy_britain.html"><img src="images/british_isles_thumb.jpg" /></a>
         <p class="caption">
-          Ptolemaic Map Of The British Isles, Ca. 1480,
+          <a href="http://www.bl.uk/onlinegallery/onlineex/unvbrit/p/001hrl000007182u00060vrb.html">Ptolemaic
+          Map Of The British Isles</a>, Ca. 1480,
           &copy; The British Library Board.<br/>
           Harley MS 7182 ff.. 60v-61. 
         </p>
