Yuma demo update

--- a/yuma2/index_okfn.html
+++ b/yuma2/index_okfn.html
@@ -40,6 +40,12 @@
       <p>
         This page serves as a development environment for the Yuma2 (working title) OKFN
 	Annotator plugin. Hover over one of the images to get started.
+        <strong>NOTE:</strong> make sure the plovr build tool is running! Use
+      </p>
+      <p>
+        <code>java -jar plovr/plovr.jar serve okfn_plugin.json</code>
+      </p>
+        to start plovr.
       </p>
       
       <h2>Test Images</h2>
@@ -68,9 +74,39 @@
         velit. Cras eget nibh est, eu imperdiet mauris. Nulla quis justo urna. Sed eu
         rutrum mauris. Integer aliquet nulla sit amet ante mollis pellentesque.
       </p>
+      <div style="float:left; width:371px; margin:0px 20px 10px 0px;">
+        <img src="371px-Claudius-Ptolemaeus.jpg">
+        <p class="image-caption">
+          Medival Ideal Portrait of Ptolemy. Public Domain. Source:
+          <a href="http://commons.wikimedia.org/wiki/File:Claudius_Ptolemaeus.jpg">Wikimedia
+          Commons</a>
+        </p>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius 
+        diam posuere quam molestie vestibulum. Vestibulum non volutpat elit. Integer 
+        vitae felis eget magna rutrum sagittis. Nulla facilisi. Praesent a consectetur
+        velit. Cras eget nibh est, eu imperdiet mauris. Nulla quis justo urna. Sed eu
+        rutrum mauris. Integer aliquet nulla sit amet ante mollis pellentesque.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius 
+        diam posuere quam molestie vestibulum. Vestibulum non volutpat elit. Integer 
+        vitae felis eget magna rutrum sagittis. Nulla facilisi. Praesent a consectetur
+        velit. Cras eget nibh est, eu imperdiet mauris. Nulla quis justo urna. Sed eu
+        rutrum mauris. Integer aliquet nulla sit amet ante mollis pellentesque.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius 
+        diam posuere quam molestie vestibulum. Vestibulum non volutpat elit. Integer 
+        vitae felis eget magna rutrum sagittis. Nulla facilisi. Praesent a consectetur
+        velit. Cras eget nibh est, eu imperdiet mauris. Nulla quis justo urna. Sed eu
+        rutrum mauris. Integer aliquet nulla sit amet ante mollis pellentesque.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius 
+        diam posuere quam molestie vestibulum. Vestibulum non volutpat elit. Integer 
+        vitae felis eget magna rutrum sagittis. Nulla facilisi. Praesent a consectetur
+        velit. Cras eget nibh est, eu imperdiet mauris. Nulla quis justo urna. Sed eu
+        rutrum mauris. Integer aliquet nulla sit amet ante mollis pellentesque.
+      </p>
       <p style="clear:both;"></p>
     </div>
-    <script src='yuma2.plugin.min.js'></script>
+    <script src="yuma2.plugin.min.js"></script>
     <script>
       $(document.body).annotator()
 	.annotator('addPlugin', 'YumaImagePlugin')
