--- a/publications.html
+++ b/publications.html
@@ -45,8 +45,9 @@
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
         <li>Rainer Simon, Elton Barker, Leif Isaksen. 2012. Exploring Pelagios: A Visual Browser for Geo-Tagged 
-          Datasets. In <i>International Workshop on Supporting Users' Exploration of Digital Libraries</i>. September
-          27, 2012. Paphos, Cyprus.</li>
+          Datasets. In <i>International Workshop on Supporting Users' Exploration of Digital Libraries</i>. Eneko Agirre,
+          Kate Fernie, Arantxa Otegi, Mark Stevenson (Eds.) Cyprus, Paphos, September 27, 2012, pp. 29 - 34.
+          ISBN 978-84-616-0682-5.</li>
 
         <li>Rainer Simon, Joachim Jung, Bernhard Haslhofer. 2011. The YUMA Media Annotation Framework. In <i>Proceedings
           of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
