--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,9 @@
           Kate Fernie, Arantxa Otegi, Mark Stevenson (Eds.) Cyprus, Paphos, September 27, 2012, pp. 29 - 34.
           ISBN 978-84-616-0682-5.</li>
 
+        <li>Elton Barker, Rainer Simon, Leif Isaksen. 2012. Pelagios: An Information Superhighway for the Ancient World
+          In <i>Digital Humanities - DH2012</i>. July 16 - 22, 2012. Hamburg, Germany.</li>
+
         <li>Rainer Simon, Joachim Jung, Bernhard Haslhofer. 2011. The YUMA Media Annotation Framework. In <i>Proceedings
           of the 15th International Conference on Theory and Practice of Digital Libraries: Research and Advanced Technology
           for Digital Libraries</i> (TPDL'11). Springer-Verlag, Berlin, Heidelberg, pp. 434-437.
