--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
         <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">from the library of the Vienna University of Technology</a>.
       </p>
 
+     <h1>CURRENT RESEARCH PROJECTS</h1>
+     <ul>
+       <li><strong>monitrix</strong>. Contract development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.
+         <a href="http://github.com/ukwa/monitrix">Find out more...</a>
+       </li>
+       <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
+         from the domain of Ancient World research through the places they refer to using Linked Data technologies.
+         <a href="http://pelagios-project.blogspot.co.uk">Find out more...</a><br/>
+         <i>Funded by <a href="http://www.jisc.ac.uk/">JISC</a>, United Kingdom.</i>
+       </li>
+     </ul>
+
+     <h1>SELECTED RESEARCH PROJECTS (COMPLETED)</h1>
+     <ul>
+       <li><a href="http://www.europeanaconnect.eu/">EuropeanaConnect</a> 2009 - 2011</li>
+       <li><a href="http://www.bl.uk/aboutus/stratpolprog/ccare/projects/planets/index.html">Planets</a> 2009 - 2010</li>
+       <li><a href="http://www.ftw.at/forschung-innovation/projekte/wikivienna">WikiVienna</a> 2007-2008
+         (<a href="files/Standard_WikiVienna.pdf">newspaper article</a>, <a href="files/impuls_ftw.mp3">radio interview</a>)
+       </li>
+       <li><a href="http://p2d.ftw.at/">Point to Discover</a> 2005-2007
+         (<a href="http://p2d.ftw.at/downloads/geoconnexion.pdf">article</a> from
+         <a href="http://www.geoconnexion.com/">GeoConnexion</a> magazine, May 2007)</li>
+       <li><a href="http://www.josefsplatz.info">Creative Histories - The Josefsplatz Experience</a> 2004-2006
+         (<a href="files/Standard_CreatHis.jpg">newspaper article</a>).</li>
+       <li><a href="http://mona.ftw.at/">MONA - Mobile multimOdal Next-generation Applications</a> 2003-2004</li>
+     </ul>
+
       <h1>ACTIVITIES</h1>
       <ul>
         <li>Organization Commitee member of the <a href="http://dme.ait.ac.at/ugc4glam/">Joint Workshop on User Generated
@@ -97,36 +124,6 @@
          </p> 
        </li>						
      </ul>	
-
-     <h1>CURRENT RESEARCH PROJECTS</h1>
-     <ul>
-       <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
-         from the domain of Ancient World research through the places they refer to using Linked Data technologies.
-         <a href="http://pelagios-project.blogspot.co.uk">Find out more...</a><br/>
-         <i>Funded by <a href="http://www.jisc.ac.uk/">JISC</a>, United Kingdom.</i>
-       </li>
-       <li><strong>BackMeUp</strong>. An interdisciplinary research project
-         that aims to raise awareness of privacy and loss of personal data scattered across social networks
-         and Web 2.0 platforms. BackMeUp addresses social, judicial as well as technical issues.
-         <a href="http://www.x-net.at/explore-en/backmeup">Find out more...</a><br/>
-         <i>Funded by the <a href="http://www.ffg.at/">Austrian Research Promotion Agency</a> FFG.</i>
-       </li>
-     </ul>
-
-     <h1>SELECTED RESEARCH PROJECTS (COMPLETED)</h1>
-     <ul>
-       <li><a href="http://www.europeanaconnect.eu/">EuropeanaConnect</a> 2009 - 2011</li>
-       <li><a href="http://www.bl.uk/aboutus/stratpolprog/ccare/projects/planets/index.html">Planets</a> 2009 - 2010</li>
-       <li><a href="http://www.ftw.at/forschung-innovation/projekte/wikivienna">WikiVienna</a> 2007-2008
-         (<a href="files/Standard_WikiVienna.pdf">newspaper article</a>, <a href="files/impuls_ftw.mp3">radio interview</a>)
-       </li>
-       <li><a href="http://p2d.ftw.at/">Point to Discover</a> 2005-2007
-         (<a href="http://p2d.ftw.at/downloads/geoconnexion.pdf">article</a> from
-         <a href="http://www.geoconnexion.com/">GeoConnexion</a> magazine, May 2007)</li>
-       <li><a href="http://www.josefsplatz.info">Creative Histories - The Josefsplatz Experience</a> 2004-2006
-         (<a href="files/Standard_CreatHis.jpg">newspaper article</a>).</li>
-       <li><a href="http://mona.ftw.at/">MONA - Mobile multimOdal Next-generation Applications</a> 2003-2004</li>
-     </ul>
    </div>
   </body>
 </html>
