--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="http://www.ub.tuwien.ac.at/diss/AC05037086.pdf">from the library of the Vienna University of Technology</a>.
       </p>
 
-     <h1>CURRENT RESEARCH PROJECTS</h1>
+     <h1>CURRENT PROJECTS</h1>
      <ul>
        <li><strong>monitrix</strong>. Contract development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.
          <a href="http://github.com/ukwa/monitrix">Find out more...</a>
@@ -59,7 +59,7 @@
        </li>
      </ul>
 
-     <h1>SELECTED RESEARCH PROJECTS (COMPLETED)</h1>
+     <h1>SELECTED PROJECTS (COMPLETED)</h1>
      <ul>
        <li><a href="http://www.europeanaconnect.eu/">EuropeanaConnect</a> 2009 - 2011</li>
        <li><a href="http://www.bl.uk/aboutus/stratpolprog/ccare/projects/planets/index.html">Planets</a> 2009 - 2010</li>
