--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 
      <h1>CURRENT PROJECTS</h1>
      <ul>
-       <li><strong>monitrix</strong>. Contract development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.
+       <li><strong>monitrix</strong>. A monitoring system for the <a href="https://webarchive.jira.com/wiki/display/Heritrix/Heritrix">Heritrix</a>
          <a href="http://github.com/ukwa/monitrix">Find out more...</a>
+         Web archival crawler. <i>Contract development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.</i>
        </li>
        <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
          from the domain of Ancient World research through the places they refer to using Linked Data technologies.
@@ -72,6 +73,31 @@
        <li><a href="http://www.josefsplatz.info">Creative Histories - The Josefsplatz Experience</a> 2004-2006
          (<a href="files/Standard_CreatHis.jpg">newspaper article</a>).</li>
        <li><a href="http://mona.ftw.at/">MONA - Mobile multimOdal Next-generation Applications</a> 2003-2004</li>
+     </ul>
+
+     <h1>AWARDS</h1>
+     <ul>
+       <li>First Prize at the <a href="http://www.europeanaconnect.eu/europeanatech/">EuropeanaTech 2011</a> Hackathon with
+         the <a href="http://www.europeanaglobe.eu/">CultureGlobe Demo</a> (<a href="http://www.youtube.com/watch?v=lCQYD7drPOk">video</a>,
+         <a href="https://github.com/cultureglobe/cultureglobe">source code</a>)</li>
+
+       <li>First place at the 2nd International Nokia Ubimedia Mindtrek Award for the <a href="http://p2d.ftw.at/">Point to
+         Discover research project</a>, at the Mindtrek 2008 Conference, Tampere, Finland, October 2008.</li>
+
+       <li>Best Paper at the <a href="http://www.dl.kuis.kyoto-u.ac.jp/w2gis06/">W2GIS 2006 Symposium</a>, Hong Kong, China:
+         <p class="award">Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. <em>Beyond Location Based - The Spatially Aware
+           Mobile Phone.</em> Proceedings of the  6th International Symposium on Web and Wireless Geographical Information 
+           Systems (W2GIS 2006), Hong Kong, China, December 4-5, 2006. Springer Lecture Notes in Computer Science, vol.
+           4295/2006, pp 12-21.
+         </p>
+       </li>
+
+       <li>Best Poster at the <a href="http://www2004.org/">WWW2004 conference</a>, New York, USA:
+         <p class="award">Rainer Simon, Michael Jank, Florian Wegscheider. <em>A Generic UIML Vocabulary for Device- 
+           and Modality Independent User Interfaces.</em> Poster Proceedings of the 13th International World Wide Web 
+           Conference, May 17-22 2004, New York, USA. pp 434-435. ACM Press.
+         </p> 
+       </li>						
      </ul>
 
       <h1>ACTIVITIES</h1>
@@ -98,32 +124,7 @@
           Information Science</a> (2011, 2010), the <a href="http://www.semantic-web-journal.net/">Semantic Web - Interoperability,
           Usability, Applicability</a> journal (2011), <a href="www.computer.org/pervasive/">IEEE Pervasive Computing</a> (2010),
           and <a href="http://www.wiley.com/bw/journal.asp?ref=1361-1682">Transactions in GIS</a> (2009).</li>
-      </ul>
-
-     <h1>AWARDS</h1>
-     <ul>
-       <li>First Prize at the <a href="http://www.europeanaconnect.eu/europeanatech/">EuropeanaTech 2011</a> Hackathon with
-         the <a href="http://www.europeanaglobe.eu/">CultureGlobe Demo</a> (<a href="http://www.youtube.com/watch?v=lCQYD7drPOk">video</a>,
-         <a href="https://github.com/cultureglobe/cultureglobe">source code</a>)</li>
-
-       <li>First place at the 2nd International Nokia Ubimedia Mindtrek Award for the <a href="http://p2d.ftw.at/">Point to
-         Discover research project</a>, at the Mindtrek 2008 Conference, Tampere, Finland, October 2008.</li>
-
-       <li>Best Paper at the <a href="http://www.dl.kuis.kyoto-u.ac.jp/w2gis06/">W2GIS 2006 Symposium</a>, Hong Kong, China:
-         <p class="award">Rainer Simon, Peter Fr&ouml;hlich, Hermann Anegg. <em>Beyond Location Based - The Spatially Aware
-           Mobile Phone.</em> Proceedings of the  6th International Symposium on Web and Wireless Geographical Information 
-           Systems (W2GIS 2006), Hong Kong, China, December 4-5, 2006. Springer Lecture Notes in Computer Science, vol.
-           4295/2006, pp 12-21.
-         </p>
-       </li>
-
-       <li>Best Poster at the <a href="http://www2004.org/">WWW2004 conference</a>, New York, USA:
-         <p class="award">Rainer Simon, Michael Jank, Florian Wegscheider. <em>A Generic UIML Vocabulary for Device- 
-           and Modality Independent User Interfaces.</em> Poster Proceedings of the 13th International World Wide Web 
-           Conference, May 17-22 2004, New York, USA. pp 434-435. ACM Press.
-         </p> 
-       </li>						
-     </ul>	
+      </ul>	
    </div>
   </body>
 </html>
