--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
      <h1>CURRENT PROJECTS</h1>
      <ul>
        <li><strong>monitrix</strong>. A monitoring system for the <a href="https://webarchive.jira.com/wiki/display/Heritrix/Heritrix">Heritrix</a>
-         <a href="http://github.com/ukwa/monitrix">Find out more...</a>
-         Web archival crawler. <i>Contract development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.</i>
+         Web archival crawler. <a href="http://github.com/ukwa/monitrix">Find out more...</a>
+         <i>Contract development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.</i>
        </li>
        <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
          from the domain of Ancient World research through the places they refer to using Linked Data technologies.
