--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      <ul>
        <li><strong>monitrix</strong>. A monitoring system for the <a href="https://webarchive.jira.com/wiki/display/Heritrix/Heritrix">Heritrix</a>
          Web archival crawler. <a href="http://github.com/ukwa/monitrix">Find out more...</a><br/>
-         <i>Contract development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.</i>
+         <i>Custom development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.</i>
        </li>
        <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
          from the domain of Ancient World research through the places they refer to using Linked Data technologies.
