--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 
       <h1>ACTIVITIES</h1>
       <ul>
+        <li>Maintainer of the Open Source Web image annotation system <a href="http://annotorious.github.com/">Annotorious</a></li>
+        
         <li>Organization Commitee member of the <a href="http://dme.ait.ac.at/ugc4glam/">Joint Workshop on User Generated
           Content for Galleries, Libraries, Archives and Museums (UGC4GLAM)</a> held in Vienna, May 16-17 2011.</li>
         
