--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
          
        <li>First Prize at the <a href="http://www.europeanaconnect.eu/europeanatech/">EuropeanaTech 2011</a> Hackathon with
          the <a href="http://www.europeanaglobe.eu/">CultureGlobe Demo</a> (<a href="http://www.youtube.com/watch?v=lCQYD7drPOk">video</a>,
-         <a href="https://github.com/cultureglobe/cultureglobe">source code</a>)</li>
+         <a href="https://github.com/cultureglobe/cultureglobe">source code</a>).</li>
 
        <li>First place at the 2nd International Nokia Ubimedia Mindtrek Award for the <a href="http://p2d.ftw.at/">Point to
          Discover research project</a>, at the Mindtrek 2008 Conference, Tampere, Finland, October 2008.</li>
