--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <h1>ACTIVITIES</h1>
       <ul>
         <li>Maintainer of <a href="http://annotorious.github.com/">Annotorious</a>, an Open Source Web image 
-          annotation system.</li>
+          annotation system (<a href="https://www.youtube.com/watch?v=-HgWIkBeQNM">Video: Presentation at iAnnotate'13</a>).</li>
         
         <li>Organization Commitee member of the <a href="http://dme.ait.ac.at/ugc4glam/">Joint Workshop on User Generated
           Content for Galleries, Libraries, Archives and Museums (UGC4GLAM)</a> held in Vienna, May 16-17 2011.</li>
