--- a/publications.html
+++ b/publications.html
@@ -70,7 +70,7 @@
 
         <li>Rainer Simon, Christian Sadilek, Joachim Korb, Matthias Baldauf, Bernhard Haslhofer. 2010. Tag Clouds and Old 
           Maps: Annotations as Linked Spatiotemporal Data in the Cultural Heritage Domain. In <i>Proceedings of the Workshop
-          on Linked Spatiotemporal Data 2010</i>. Septbember 14, 2010. Zurich, Switzerland. CEUR-WS.org/Vol-691. Article 2,
+          on Linked Spatiotemporal Data 2010</i>. September 14, 2010. Zurich, Switzerland. CEUR-WS.org/Vol-691. Article 2,
           12 pages. ISSN 1613-0073.
 
         <li>Matthias Baldauf, Rainer Simon. 2010. Getting Context on the Go: Mobile Urban Exploration with Ambient Tag Clouds.
@@ -80,6 +80,10 @@
         <li>Bernhard Haslhofer, Elaheh Momeni, Manuel Gay, Rainer Simon. 2010. Augmenting Europeana Content with Linked Data
           Resources. In <i>Proceedings of the 6th International Conference on Semantic Systems</i> (I-SEMANTICS '10). ACM, 
           New York, NY, USA. Article 40, 3 pages. ISBN 978-1-4503-0014-8.</li>
+         
+        <li>Christian Sadilek, Rainer Simon, Bernhard Haslhofer. 2010. Service Orchestration for Linking Open Data: 
+          Applying a SOA principle to the Web of Data. In <i>1st International Workshop on Recent Trends in SOA Based
+          Information Systems</i> (RTSOABIS 2010). June 8, 2010. Funchal, Portugal.</li>
 
         <li>Rainer Simon, Joachim Korb, Christian Sadilek, Rainer Schmidt. 2009. Collaborative Map Annotation in the Context of 
           Historical GIS. In <i>5th IEEE International Conference on E-Science Workshops</i>, pp.139-142.
