--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
       <ul>
         <li>Rainer Simon, Elton Barker, Leif Isaksen. 2012. Exploring Pelagios: A Visual Browser for Geo-Tagged 
           Datasets. In <i>International Workshop on Supporting Users' Exploration of Digital Libraries</i>. Eneko Agirre,
-          Kate Fernie, Arantxa Otegi, Mark Stevenson (Eds.) Cyprus, Paphos, September 27, 2012, pp. 29 - 34.
+          Kate Fernie, Arantxa Otegi, Mark Stevenson (Eds.) Paphos, Cyprus, September 27, 2012, pp. 29 - 34.
           ISBN 978-84-616-0682-5.</li>
 
         <li>Elton Barker, Rainer Simon, Leif Isaksen. 2012. Pelagios: An Information Superhighway for the Ancient World
