--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p class="intro">
         I'm a scientist at the 
         <a href="http://www.ait.ac.at/research-services/research-services-safety-security/digital-memory-engineering/">Digital
-        Memory Engineering</a> research group of the <a href="http://www.ait.ac.at">AIT - Austrian Institute of Technology</a>. My
+        Memory Engineering</a> research group of the <a href="http://www.ait.ac.at">AIT Austrian Institute of Technology</a>. My
         work revolves around the use of semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
         Data</a> in the <i>digital library</i> and <i>digital humanities</i> fields. I always had a passion for maps,
         and in many of my projects I have been dealing with geospatial or cartographic data.
