--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="http://www.ait.ac.at/research-services/research-services-safety-security/digital-memory-engineering/">Digital
         Memory Engineering</a> research group of the <a href="http://www.ait.ac.at">AIT Austrian Institute of Technology</a>. My
         work revolves around the use of semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
-        Data</a> in the <i>digital library</i> and <i>digital humanities</i> fields. I always had a passion for maps,
+        Data</a> in the <i>Digital Library</i> and <i>Digital Humanities</i> fields. I always had a passion for maps,
         and in many of my projects I have been dealing with geospatial or cartographic data.
         I'm also an avid software developer. I have more than 10 years of experience with Java, and (over time) had decent
         exposure to a range of other languages, including C++, C#, Python, Ruby and Groovy. Recently, though, I love to write
