--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
       <ul>
         <li>Maintainer of <a href="http://annotorious.github.com/">Annotorious</a>, an Open Source Web image 
           annotation system (<a href="https://www.youtube.com/watch?v=-HgWIkBeQNM">Video: Presentation at iAnnotate'13</a>).</li>
+          
+        <li>Programme Commitee member of the Workshop on <em>Practical Experiences with CIDOC CRM and its Extensions
+          (CRMEX)</em>, held in conjunction with the <a href="http://www.tpdl2013.info">17th International Conference
+          on Theory and Practice of Digital Libraries (TPDL 2013)</a>, Valetta, Malta, September 22-26, 2013.</li>        
         
         <li>Organization Commitee member of the <a href="http://dme.ait.ac.at/ugc4glam/">Joint Workshop on User Generated
           Content for Galleries, Libraries, Archives and Museums (UGC4GLAM)</a> held in Vienna, May 16-17 2011.</li>
