Added TPDL2013 demo paper

--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,10 @@
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
+        <li>Rainer Simon, Andrew Jackson. 2013. Monitrix - A Monitoring & Reporting Dashboard for Web Archivists. Accepted
+          for publication in <i>Proceedings of the 17th International Conference on Theory and Practice of Digital Libraries</i>
+          (TPDL'13). Springer LNCS.</li>
+                
         <li>Rainer Simon, Elton Barker, Leif Isaksen. 2012. Exploring Pelagios: A Visual Browser for Geo-Tagged 
           Datasets. In <i>International Workshop on Supporting Users' Exploration of Digital Libraries</i>. Eneko Agirre,
           Kate Fernie, Arantxa Otegi, Mark Stevenson (Eds.) Paphos, Cyprus, September 27, 2012, pp. 29 - 34.
