--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,12 @@
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
+        <li>
+          Rainer Simon, Peter Pilgerstorfer, Leif Isaksen, Elton Barker. 2013. Towards Semi-Automatic Annotation of 
+          Toponyms on Old Maps. Accepted for publication in
+          <a href="http://xeee.web.auth.gr/ICA-Heritage/2011_2015/Roma2013/">8th International Workshop on Digital 
+          Approaches in Cartographic Heritage</a>. Rome, Italy, September 19-20, 2013.</li>
+          
         <li>Rainer Simon, Andrew Jackson. 2013. Monitrix - A Monitoring & Reporting Dashboard for Web Archivists. Accepted
           for publication in <i>Proceedings of the 17th International Conference on Theory and Practice of Digital Libraries</i>
           (TPDL'13). Springer LNCS.</li>
