--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 
      <h1>CURRENT PROJECTS</h1>
      <ul>
-       <li><strong>monitrix</strong>. A monitoring system for the <a href="https://webarchive.jira.com/wiki/display/Heritrix/Heritrix">Heritrix</a>
-         Web archival crawler. <a href="http://github.com/ukwa/monitrix">Find out more...</a><br/>
-         <i>Custom development for the <a href="http://www.webarchive.org.uk/ukwa/">UK Web Archive</a>.</i>
-       </li>
-       <li><strong>Pelagios</strong>. A digital classics network which aims to interconnect scholarly resources
-         from the domain of Ancient World research through the places they refer to using Linked Data technologies.
+       <li><strong>Pelagios 3</strong>. Pelagios is a digital classics network which aims to interconnect scholarly
+         resources from the domain of Ancient World research through the places they refer to using Linked Data
+         technologies. Pelagios 3 extends the range of Pelagios towards <strong>Early Geospatial Documents</strong> -
+         maps and geographical texts prior to the year 1492.
          <a href="http://pelagios-project.blogspot.co.uk">Find out more...</a><br/>
-         <i>Funded by <a href="http://www.jisc.ac.uk/">JISC</a>, United Kingdom.</i>
+         <i>Funded by <a href="http://www.mellon.org/">The Andrew W. Mellon Foundation</a>, United States.</i>
        </li>
      </ul>
 
      <h1>SELECTED PROJECTS (COMPLETED)</h1>
      <ul>
+       <li><a href="http://github.com/ukwa/monitrix">monitrix</a> 2013</li>
+       <li><a href="http://pelagios-project.blogspot.co.uk">Pelagios 1 & 2</a> 2011 - 2012</li>
        <li><a href="http://www.europeanaconnect.eu/">EuropeanaConnect</a> 2009 - 2011</li>
        <li><a href="http://www.bl.uk/aboutus/stratpolprog/ccare/projects/planets/index.html">Planets</a> 2009 - 2010</li>
        <li><a href="http://www.ftw.at/forschung-innovation/projekte/wikivienna">WikiVienna</a> 2007-2008
