--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
         <li>Maintainer of <a href="http://annotorious.github.com/">Annotorious</a>, an Open Source Web image 
           annotation system (<a href="https://www.youtube.com/watch?v=-HgWIkBeQNM">Video: Presentation at iAnnotate'13</a>).</li>
           
+        <li>Member of the <a href="http://xeee.web.auth.gr/ICA-Heritage/2011_2015/Introduction.htm">ICA
+          Commission on Digital Technologies in Cartographic Heritage</a>.</li>
+          
         <li>Programme Commitee member of the Workshop on <em>Practical Experiences with CIDOC CRM and its Extensions
           (CRMEX)</em>, held in conjunction with the <a href="http://www.tpdl2013.info">17th International Conference
           on Theory and Practice of Digital Libraries (TPDL 2013)</a>, Valetta, Malta, September 22-26, 2013.</li>        
