--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         exposure to a range of other languages, including Python, Groovy, Ruby, C# and C++. Recently, though, I love to write
         my code in Scala. And I'm also happy to work in JavaScript - 
         <a href="http://en.wikipedia.org/wiki/If_and_only_if" title="if and only if">iff</a> the situation calls for it.
-        (There's also a slightly extended - and more academic - bio available <a href="bio.html">here</a>.)
+        (There's also a slightly extended - and more academic - version of my bio available <a href="bio.html">here</a>.)
       </p>
       <p>
         Prior to my current position, I worked as a researcher and project manager at the
