--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
        </li>						
      </ul>
 
-      <h1>ACTIVITIES</h1>
+      <h1>ACTIVITIES &amp; MEMBERSHIPS</h1>
       <ul>
         <li>Maintainer of <a href="http://annotorious.github.com/">Annotorious</a>, an Open Source Web image 
           annotation system (<a href="https://www.youtube.com/watch?v=-HgWIkBeQNM">Video: Presentation at iAnnotate'13</a>).</li>
+          
+        <li>Member of the <a href="http://adho.org/lod/?page_id=7">Alliance of Digital Humanities Organizations 
+        (ADHO) Linked Open Data Special Interest Group</a>.</li>
           
         <li>Member of the <a href="http://xeee.web.auth.gr/ICA-Heritage/2011_2015/Introduction.htm">International 
           Cartographic Association Commission on Digital Technologies in Cartographic Heritage</a>.</li>
