--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
      <ul>
        <li><strong>Pelagios 3</strong>. Pelagios is a digital classics network which aims to interconnect scholarly
          resources from the domain of Ancient World research through the places they refer to using Linked Data
-         technologies. <!-- Pelagios 3 extends the range of Pelagios towards <strong>Early Geospatial Documents</strong> -
+         technologies. Pelagios 3 extends the range of Pelagios towards <strong>Early Geospatial Documents</strong> -
          maps and geographical texts prior to the year 1492.
          <a href="http://pelagios-project.blogspot.co.uk">Find out more...</a><br/>
-         <i>Funded by <a href="http://www.mellon.org/">The Andrew W. Mellon Foundation</a>, United States.</i> -->
+         <i>Funded by <a href="http://www.mellon.org/">The Andrew W. Mellon Foundation</a></i>
        </li>
      </ul>
 
