--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
         <li>Member of the <a href="http://xeee.web.auth.gr/ICA-Heritage/2011_2015/Introduction.htm">International 
           Cartographic Association Commission on Digital Technologies in Cartographic Heritage</a>.</li>
           
+        <li>Member of the
+          <a href="http://pro.europeana.eu/web/network/europeana-tech/-/wiki/Main/Task+force+multilingual+semantic+enrichment;jsessionid=A882150E8DA80F8CE5705A796693730F">Europeana
+          Task Force on Multilingual and Semantic Enrichment Strategy</a>.</li>
+          
         <li>Programme Commitee member of the Workshop on <em>Practical Experiences with CIDOC CRM and its Extensions
           (CRMEX)</em>, held in conjunction with the <a href="http://www.tpdl2013.info">17th International Conference
           on Theory and Practice of Digital Libraries (TPDL 2013)</a>, Valetta, Malta, September 22-26, 2013.</li>        
