--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       <p class="intro">
         I'm a scientist at the 
-        <a href="http://www.ait.ac.at/research-services/research-services-safety-security/digital-memory-engineering/">Digital
-        Memory Engineering</a> research group of the <a href="http://www.ait.ac.at">AIT Austrian Institute of Technology</a>. My
+        <a href="http://www.ait.ac.at/ngcms">Next-Generation Content Management Systems</a> research group of
+        the <a href="http://www.ait.ac.at">AIT Austrian Institute of Technology</a>. My
         work revolves around the use of semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
         Data</a> in the <i>Digital Humanities</i> and <i>Digital Library</i> fields. I always had a passion for maps,
         and in many of my projects I have been dealing with geospatial or cartographic data. Presently, I serve as the
