--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
       <ul>
         <li>
           Rainer Simon, Peter Pilgerstorfer, Leif Isaksen, Elton Barker. 2013. Towards Semi-Automatic Annotation of 
-          Toponyms on Old Maps. Accepted for publication in
+          Toponyms on Old Maps. In
           <a href="http://xeee.web.auth.gr/ICA-Heritage/2011_2015/Roma2013/">8th International Workshop on Digital 
           Approaches in Cartographic Heritage</a>. Rome, Italy, September 19-20, 2013.</li>
           
