--- a/publications.html
+++ b/publications.html
@@ -15,7 +15,7 @@
       
       <ul>
         <li>
-          Rainer Simon, Elton Barker, Leif Isaksen. Pelagios. In <i>ISAW Papers 7</i> 
+          Rainer Simon, Elton Barker, Leif Isaksen. Pelagios. 2014. In <i>ISAW Papers 7</i> 
           (<a href="http://sfsheath.github.io/lawdi-publication/simon-barker-desoto-isaksen/">Preprint</a>).</li>
         
         <li>Bernhard Haslhofer, Robert Sanderson, Rainer Simon, and Herbert Van de Sompel. 2012. Open Annotations on 
