Updated index page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <li>Organization- and Programme Commitee member of the <a href="http://msi.ftw.at/">Workshop on Mobile Spatial
           Interaction</a> at the <a href="http://www.chi2007.org/">CHI 2007</a> conference in San Jose, California.</li>
 
-        <li>Reviewer for the <a href="http://www.tandf.co.uk/journals/tf/13658816.html">International Journal of Geographical 
+        <li>Reviewer for <a href="http://mobilehci.acm.org/2014/">Mobile HCI 2014</a>, the <a href="http://www.tandf.co.uk/journals/tf/13658816.html">International Journal of Geographical 
           Information Science</a> (2011, 2010), the <a href="http://www.semantic-web-journal.net/">Semantic Web - Interoperability,
           Usability, Applicability</a> journal (2011), <a href="www.computer.org/pervasive/">IEEE Pervasive Computing</a> (2010),
           and <a href="http://www.wiley.com/bw/journal.asp?ref=1361-1682">Transactions in GIS</a> (2009).</li>
