--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>
 
       <p class="intro">
-        I'm a computer scientist at the 
+        I'm a scientist at the 
         <a href="http://www.ait.ac.at/ngcms">Next-Generation Content Management Systems</a> research group of
         the <a href="http://www.ait.ac.at">AIT Austrian Institute of Technology</a>. My
         work revolves around the use of semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
