--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
           International Workshop on Location and the Web</a> held in conjunction with <a href="http://cikm2014.fudan.edu.cn/">CIKM
           2014</a>, Shanghai, China, November 3-7 2014.</li>
           
+        <li>Programme Commitee member of the <a href="http://www.eagle-network.eu/about/events/eagle2014/">EAGLE 2014 - 
+          International Conference</a>, Paris, France, September 29-30 2014.</li>
+          
         <li>Programme Commitee member of the Workshop on <em>Practical Experiences with CIDOC CRM and its Extensions
           (CRMEX)</em>, held in conjunction with the <a href="http://www.tpdl2013.info">17th International Conference
           on Theory and Practice of Digital Libraries (TPDL 2013)</a>, Valetta, Malta, September 22-26, 2013.</li>        
