--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,9 @@
       <h1>JOURNAL</h1>
       
       <ul>
+        <li>Rainer Simon, Peter Pilgerstorfer, Leif Isaksen, Elton Barker. 2014. Towards Semi-Automatic Annotation of
+          Toponyms on Old Maps. In <i>e-Perimetron</i>. Vol. 9, No.3 (2014), pp. 105-128. ISSN 1790-3769.</li>   
+          
         <li>
           Rainer Simon, Elton Barker, Leif Isaksen. Pelagios. 2014. In <i>ISAW Papers 7</i> 
           (<a href="http://sfsheath.github.io/lawdi-publication/simon-barker-desoto-isaksen/">Preprint</a>).</li>
