--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
         <li>Leif Isaksen, Elton Barker, Rainer Simon, Pau de Soto Cañamares. 2014. Linking Early Geospatial Documents with Pelagios 3.
 	  In <i>Cartography between Europe and the Islamic World 1100–1600</i>. London, United Kingdom, September 8-9, 2014.</li>
           
-	<li>Rainer Simon, Elton Barker, Pau de Soto Cañamares, Leif Isaksen. Pelagios 3: Towards the Semi-Automatic Annotation 
+	<li>Rainer Simon, Elton Barker, Pau de Soto Cañamares, Leif Isaksen. 2014. Pelagios 3: Towards the Semi-Automatic Annotation 
 	  of Toponyms in Early Geospatial Documents. In <i>Digital Humanities 2014</i>. Lausanne, Switzerland, July 8-12, 2014</li>
       
         <li>
