--- a/toponym_identification/index.html
+++ b/toponym_identification/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Toponym Identificationon Old Maps</title>
+    <title>Toponym Identification on Old Maps</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -52,7 +52,7 @@
       <div class="captioned_image">
         <a href="detection/josephinische_landesaufnahme.html"><img src="images/josephinische_landesaufnahme_thumb.jpg" /></a>
         <p class="caption">
-          Josephinische Landesaufnahme: Gebiet von Mooskirchen bis Grazer Feld, Steiermark, Österreich, 1764-1787.<br/>
+          Josephinische Landesaufnahme: Gebiet von Mooskirchen bis Grazer Feld, Steiermark, Ã–sterreich, 1764-1787.<br/>
           Source: 
           <a href="http://de.wikipedia.org/w/index.php?title=Datei:Josephinische_Landesaufnahme_Mooskirchen_Grazer_Feld.jpg">Wikimedia
           Commons</a>
