--- a/publications.html
+++ b/publications.html
@@ -56,6 +56,11 @@
 
       <h1>CONFERENCE OR WORKSHOP</h1>
       <ul>
+      	<li>Hugo Manguinhas, Nuno Freire, Antoine Isaac, Juliane Stiller, Valentine Charles, Aitor Soroa, Rainer Simon,
+      	  and Vladimir Alexiev. 2016. Comparative Evaluation of Semantic Enrichments for Cultural Heritage Metadata.
+      	  Accepted for publication at <a href="http://www.tpdl2016.org/">20th International Conference on Theory and
+      	  Practice of Digital Libraries (TPDL 2016)</a>. Hannover, Germany, September 5-9, 2016.</li>
+      	
         <li>Leif Isaksen, Rainer Simon, Elton Barker, Pau de Soto Cañamares. 2014. Pelagios and the Emerging Graph of Ancient
           World Data. In <i>WebSci '14 Proceedings of the 2014 ACM Conference on Web Science</i>, pp. 197-201. ACM New York.
           ISBN 978-1-4503-2622-3.</li>
