--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,10 @@
       <h1>JOURNAL</h1>
       
       <ul>
+      	<li>Rainer Simon, Leif Isaksen, Elton Barker, Pau de Soto Cañamares. 2016. Peripleo: a Tool for Exploring
+      	Heterogeneous Data through the Dimensions of Space and Time.</li> In
+      	<a href="http://journal.code4lib.org/articles/11144">Code4Lib Issue 31 (2016-01-28)</a>. ISSN 1940-5758.</li> 
+      	
       	<li>Rainer Simon, Elton Barker, Leif Isaksen, Pau de Soto Cañamares. 2015. Linking Early Geospatial 
       	  Documents, One Place at a Time: Annotation of Geographic Documents with Recogito. In <i>e-Perimetron</i>.
       	  Vol.10, No.2 (2015), pp. 49-59. ISSN 1790-3769.</li>
