--- a/publications.html
+++ b/publications.html
@@ -15,7 +15,7 @@
       
       <ul>
       	<li>Rainer Simon, Leif Isaksen, Elton Barker, Pau de Soto Cañamares. 2016. Peripleo: a Tool for Exploring
-      	Heterogeneous Data through the Dimensions of Space and Time.</li> In
+      	Heterogeneous Data through the Dimensions of Space and Time. In
       	<a href="http://journal.code4lib.org/articles/11144">Code4Lib Issue 31 (2016-01-28)</a>. ISSN 1940-5758.</li> 
       	
       	<li>Rainer Simon, Elton Barker, Leif Isaksen, Pau de Soto Cañamares. 2015. Linking Early Geospatial 
