--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>	
-    <title>Dr. Rainer Simon - About Me</title>
+    <title>Dr Rainer Simon - About Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">	
   </head>
   <body>
@@ -25,7 +25,7 @@
 
       <p class="intro">
         I'm a Senior Scientist at the 
-        <a href="http://www.ait.ac.at/ngcms">Next-Generation Content Management Systems</a> research group of
+        <a href="http://www.ait.ac.at/en/research-fields/data-science/">Digital Insight Lab</a> at
         the <a href="http://www.ait.ac.at">AIT Austrian Institute of Technology</a>. My
         work revolves around the use of semantic technologies and <a href="http://en.wikipedia.org/wiki/Linked_data">Linked
         Data</a> in the <i>Digital Humanities</i> and <i>Digital Library</i> fields. I always had a passion for maps,
