--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 
      <h1>CURRENT PROJECTS</h1>
      <ul>
-       <li><strong>Pelagios 3</strong>. Pelagios is a digital classics network which aims to interconnect scholarly
-         resources from the domain of Ancient World research through the places they refer to using Linked Data
-         technologies. Pelagios 3 extends the range of Pelagios towards <strong>Early Geospatial Documents</strong> -
-         maps and geographical texts prior to the year 1492.
-         <a href="http://pelagios-project.blogspot.co.uk">Find out more...</a><br/>
+       <li><strong>Pelagios Commons</strong>. Pelagios is an international
+	 Digital Humanities initiative that facilitates linking of online resources that document the past, based on the places
+	 they refer to.
+         <a href="http://commons.pelagios.org">Find out more...</a><br/>
          <i>Funded by <a href="http://www.mellon.org/">The Andrew W. Mellon Foundation</a></i>
        </li>
      </ul>
