--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 	the <a href="http://recogito.pelagios.org">Recogito annotation platform</a>.
 	I'm also an avid software developer. I have more than 10 years of experience with Java, and over time had decent
         exposure to a range of other languages, including Python, Groovy, Ruby, C# and C++. Recently, though, I love to write
-        my code in Scala. And I'm also happy to work in JavaScript - 
-        <a href="http://en.wikipedia.org/wiki/If_and_only_if" title="if and only if">iff</a> the situation calls for it.
-        (There's also a slightly extended - and more academic - version of my bio available <a href="bio.html">here</a>.)
+        my code in Scala and JavaScript. (There's also a slightly extended - and more academic - version of my bio
+	available <a href="bio.html">here</a>.)
       </p>
       <p>
         Prior to my current position, I worked as a researcher and project manager at the
