--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         and in many of my projects I have been dealing with geospatial or cartographic data. Presently, I serve as the
         Technical Director for
         <a href="http://commons.pelagios.org">Pelagios Commons</a>, an international initative that
-	aims to foster better linkages between online resources documenting the past, and as the lead developer of
+	aims to foster better linkages between online resources documenting the past, and as the technical lead for
 	the <a href="http://recogito.pelagios.org">Recogito annotation platform</a>.
 	I'm also an avid software developer. I have more than 10 years of experience with Java, and over time had decent
         exposure to a range of other languages, including Python, Groovy, Ruby, C# and C++. Recently, though, I love to write
