--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         and in many of my projects I have been dealing with geospatial or cartographic data. Presently, I serve as the
         Technical Director for
         <a href="http://commons.pelagios.org">Pelagios Commons</a>, an international initative that
-	aims to foster better linkages between online resources documenting the past, and as the technical lead for
+	aims to foster better linkages between online resources documenting the past. I am also the technical lead for
 	the <a href="http://recogito.pelagios.org">Recogito annotation platform</a>.
-	I'm also an avid software developer. I have more than 10 years of experience with Java, and over time had decent
+	As an avid software developer, I have more than 10 years of experience with Java, and over time had decent
         exposure to a range of other languages, including Python, Groovy, Ruby, C# and C++. Recently, though, I love to write
         my code in Scala and JavaScript. (There's also a slightly extended - and more academic - version of my bio
 	available <a href="bio.html">here</a>.)
