--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	the <a href="http://recogito.pelagios.org">Recogito annotation platform</a>.
 	As an avid software developer, I have more than 10 years of experience with Java, and over time had decent
         exposure to a range of other languages, including Python, Groovy, Ruby, C# and C++. Recently, though, I love to write
-        my code in Scala and JavaScript. (There's also a slightly extended - and more academic - version of my bio
+        my code mainly in Scala and JavaScript. (There's also a slightly extended - and more academic - version of my bio
 	available <a href="bio.html">here</a>.)
       </p>
       <p>
