--- a/oeaw/index.html
+++ b/oeaw/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <div id="app"></div>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="app.min.js"></script>
     </body>
 </html>
